k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolist-frontend
  template:
    metadata:
      labels:
        app: todolist-frontend
    spec:
      imagePullSecrets:
        - name: acr-pull
      containers:
        - name: todolist-frontend
          image: m324demoacrqba.azurecr.io/todolist-frontend:40ea9df
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: todolist-frontend-service
spec:
  type: ClusterIP
  selector:
    app: todolist-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
