k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: todolist.89.145.167.242.nip.io
      http:
        paths:
          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: todolist-backend-service
                port:
                  number: 3000
